--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 </div>
     <h2 style="color: Blue;"> Projects </h2>
         <div class="bordered">
-            <p align="center"><img align="center"src="code.png" width="400" height="400"</p>
+            <p align="center"><img align="center"src="code.png" width="400" height="400"</p><br>
 Created My Portfolio Website With <br>With The Help Of <br>HTML, CSS, Puthon
+            </p></div>
 
        <section class="footer">
         <div class="footer-content">   
