--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 style="color: Red;"><p align="Center";>Parth Sharma</p> </h1>
     <h2 style="color: Blue;">Education</h2> 
     <div class="bordered">
-      <p><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
+      <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
       <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla H.P</p>
     </div>
     <br>
