--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h2 style="color: Blue;"> Projects </h2>
         <div class="bordered">
             <p align="center"><img align="center"src="code.png" width="400" height="400"</p><br>
-Created My Portfolio Website With <br>With The Help Of <br>HTML, CSS, Puthon
+Created My Portfolio Website With <br>With The Help Of <br>HTML, CSS, Python
             </p></div>
 
        <section class="footer">
@@ -48,7 +48,7 @@ Created My Portfolio Website With <br>With The Help Of <br>HTML, CSS, Puthon
     Thanks for Visiting My Website <br>
     Copyright© 2025 All Rights Reserved.. ParthSharma
           </b>
-    <button onclick="topFunction()" id="toTheTopButton" title="Go to top">↑</button>
+    <button onclick="topFunction()" id="ToTheTopButton" title="Go to top">↑</button>
         </div>
  </section>
   </body>
