--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <header>
     <link rel="stylesheet" href="style.css">
-<tittle align="Left"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle>  
+<tittle align="Right"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle>  
      <div class="social-links">
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="100" height="100"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="100" height="60"> </a>
