--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
   <header>
     <link rel="stylesheet" href="style.css">
-<tittle align="Right"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle>  
+<tittle align="Right"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle> 
+    <p id="currentDateTime"></p>
+
+  <script>
+    // 
+    const currentDateTime = new Date();
+    const formattedDateTime = currentDateTime.toLocaleString(); //
+    
+    
+    document.getElementById("currentDateTime").textContent = formattedDateTime;
      <div class="social-links">
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="100" height="100"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="100" height="60"> </a>
@@ -47,8 +56,6 @@ Created My Portfolio Website With <br>With The Help Of <br>HTML, CSS, Python
           Contact Me :- parthsankhyanofficial@gmail.com<br>
     Thanks for Visiting My Website <br>
     Copyright© 2025 All Rights Reserved.. ParthSharma
-          </b>
-    <button onclick="topFunction()" id="ToTheTopButton" title="Go to top">↑</button>
         </div>
  </section>
   </body>
