--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <header>
     <link rel="stylesheet" href="style.css">
 <tittle align="Right"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle> 
-<p id="currentDateTime"></p>
+<p align="Right ;id="currentDateTime"></p>
 
   <script>
     // 
