--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <header>
     <link rel="stylesheet" href="style.css">
 <tittle align="Right"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle> 
-<p align="Right ;id="currentDateTime"></p>
+<h4 align="right"><p id="currentDateTime"></p>
 
   <script>
     // 
@@ -12,7 +12,7 @@
     const formattedDateTime = currentDateTime.toLocaleString(); //
     
     
-    document.getElementById("currentDateTime").textContent = formattedDateTime; </script>
+    document.getElementById("currentDateTime").textContent = formattedDateTime; </script> </h4>
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="100" height="100"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="100" height="60"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="40" height="40"></a> 
