--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang=eng>
 <head>
   <header>
-    <meta property="og:image" content="parthsankhyan.png/" />
+    
+   <img src="parthsankhyan.png" alt="Logo" class="logo">
+
     <link rel="stylesheet" href="style.css">
 <tittle align="Right"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle> 
 <h4 align="right"><p id="currentDateTime"></p>
