--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     </div>
     <br>
 <h2 style="color: Blue;">Practical Knowledge </h2>
+    <div class="bordered">
+  <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
+    <p>Copleted My School Education From<br> <B>Bilaspur Public School Bilaspur (H>P>)</B></p>
+    </div>
        <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
