--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h2 style="color: Blue;">Practical Knowledge </h2
        <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
-</a>                              
+</a>   </div>                           
  <p> 3weeks Industrial Training At  HPPWD Office <br> </be><a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
 <br> From 06-01-2024 To 25-01-2024
 <br>Construction Site Civil Hospital Sundernagar</p>   
