--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
     </div>
     <div class="bordered">
       <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
-      <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla H.P</p>
+      <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla (HP)
     </div>
     <br>
 <h2 style="color: Blue;">Practical Knowledge </h2
        <div class="bordered">
-<p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
-</a>   </div>                           
+<p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
  <p> 3weeks Industrial Training At  HPPWD Office <br> </be><a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
 <br> From 06-01-2024 To 25-01-2024
 <br>Construction Site Civil Hospital Sundernagar</p>   
