--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla (HP)
     </div>
     <br>
-<h2 style="color: Blue;">Practical Knowledge </h2
+<h2 style="color: Blue;">Practical Knowledge </h2>
        <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
  <p> 3weeks Industrial Training At  HPPWD Office <br> </be><a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
