--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head> 
    
   <body>
-    <h1 style="color: Red;"><p align="Center";>Parth Sharma</p> </h1>
-    <h2 style="color: Blue;">Education</h2> 
+    <h1> align="Center";>Parth Sharma </h1>
+     <h2>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
     <p>Copleted My School Education From<br> <B>Bilaspur Public School Bilaspur (H.P.)</B></p>
@@ -36,7 +36,7 @@
       <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla (HP)
     </div>
     <br>
-<h2 style="color: Blue;">Practical Knowledge </h2>
+<h2>>Practical Knowledge </h2>
        <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
  <p> 3weeks Industrial Training At  HPPWD Office <br> </be><a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
@@ -44,12 +44,12 @@
 <br>Construction Site Civil Hospital Sundernagar</p>   
   </div>
   <br>
-<h2 style="color: Blue;"> Skills </h2>
+<h2> Skills </h2>
 <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
-    <h2 style="color: Blue;"> Projects </h2>
+    <h2> Projects </h2>
         <div class="bordered">
             <p align="center"><img align="center"src="code.png" width="400" height="400"</p><br>
 Created My Portfolio Website With <br>With The Help Of <br>HTML, CSS, Python
