--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head> 
    
   <body>
-    <h1> align="Center";>Parth Sharma </h1>
+    <h1>Parth Sharma </h1>
      <h2>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
