--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2> Projects </h2>
         <div class="bordered">
             <p align="center"><img align="center"src="code.png" width="400" height="400"</p><br>
-Created My Portfolio Website With <br>With The Help Of <br>HTML, CSS, Python
+Created My Portfolio Website With <br>With The Help Of <br>HTML,CSS
             </p></div>
 
        <section class="footer">
