--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head> 
    
   <body>
-    <h1 align: center>Parth Sharma </h1>
-<h5 align:center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
+    <h1 align=center>Parth Sharma </h1>
+<h5 align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
      <h2>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
