--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </head> 
    
   <body>
-    <h1 align=center>Parth Sharma </h1>
+    <h1 class=heading>Parth Sharma </h1>
 <h5 align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
-     <h2>Education</h2> 
+     <h2 class=studied>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
     <p>Copleted My School Education From<br> <B>Bilaspur Public School Bilaspur (H.P.)</B></p>
@@ -50,7 +50,7 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
-    <h2> Projects </h2>
+    <h2 class=mywork> Projects </h2>
         <div class="bordered">
             <p align="center"><img align="center"src="code.png" width="400" height="400"</p><br>
 Created My Portfolio Website With <br>With The Help Of <br>HTML,CSS
