--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head> 
    
   <body>
-    <h1 class="heading">Parth Sharma </h1>
+    <h1 class="heading-h1">Parth Sharma </h1>
 <h5 align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
      <h2 class=studied>Education</h2> 
         <div class="bordered">
