--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head> 
    
   <body>
-    <h1 class="heading-h1">Parth Sharma </h1>
+    <h1 class="main-heading">Parth Sharma </h1>
 <h5 align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
      <h2 class=studied>Education</h2> 
         <div class="bordered">
@@ -39,7 +39,7 @@
     <br>
 <h2>Practical Knowledge </h2>
        <div class="bordered">
-<p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
+<p class="training"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
  <p> 3weeks Industrial Training At  HPPWD Office <br> </be><a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
 <br> From 06-01-2024 To 24-01-2024
 <br>Construction Site Civil Hospital Sundernagar</p>   
