--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     </a> </div>
   </header>
 </head> 
-   
-  <body>
-    <h1 class="main-heading">Parth Sharma </h1>
+     <body>
+       <div class="main-heading">
+<h1>Parth Sharma </h1>
 <h5 align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
+       </div>  
      <h2 class=studied>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
