--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
   </header>
 </head> 
      <body>
+       <!--Heading-->
        <div class="main-heading">
 <h1>Parth Sharma </h1>
-<h5 align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
-       </div>  
+       </div>
+<h5> align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
+       <!--Education-->
      <h2 class=studied>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
@@ -38,6 +40,7 @@
       <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla (HP)
     </div>
     <br>
+       <! 
 <h2>Practical Knowledge </h2>
        <div class="bordered">
 <p class="training"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
