--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla (HP)
     </div>
     <br>
-       <! 
+       <!--Practical Knowledge-->
 <h2>Practical Knowledge </h2>
        <div class="bordered">
 <p class="training"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
@@ -49,17 +49,19 @@
 <br>Construction Site Civil Hospital Sundernagar</p>   
   </div>
   <br>
+    <!--skills-->
 <h2> Skills </h2>
 <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
+       <!--Projects-->
     <h2 class=mywork> Projects </h2>
         <div class="bordered">
             <p align="center"><img align="center"src="code.png" width="400" height="400"</p><br>
 Created My Portfolio Website With <br>With The Help Of <br>HTML,CSS
             </p></div>
-
+<!--Footer-->
        <section class="footer">
         <div class="footer-content">   
           <b>
