--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <!--Heading-->
        <div class="main-heading">
 <h1>Parth Sharma </h1>
-<h5> align=center>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
+<h5>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
        </div>
        <!--Education-->
      <h2 class=studied>Education</h2> 
