--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <h5>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
        </div>
        <!--Education-->
-     <h2 class=studied>Education</h2> 
+       <div class=Studies
+     <h2>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
     <p>Copleted My School Education From<br> <B>Bilaspur Public School Bilaspur (H.P.)</B></p>
@@ -41,6 +42,7 @@
     </div>
     <br>
        <!--Practical Knowledge-->
+<div class="Site work">
 <h2>Practical Knowledge </h2>
        <div class="bordered">
 <p class="training"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"></a> </p>                     
@@ -48,19 +50,24 @@
 <br> From 06-01-2024 To 24-01-2024
 <br>Construction Site Civil Hospital Sundernagar</p>   
   </div>
+</div>
   <br>
     <!--skills-->
+         <div class="skills">
 <h2> Skills </h2>
 <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
+         </div>
        <!--Projects-->
-    <h2 class=mywork> Projects </h2>
+         <div class="mywork">
+    <h2> Projects </h2>
         <div class="bordered">
             <p align="center"><img align="center"src="code.png" width="400" height="400"</p><br>
 Created My Portfolio Website With <br>With The Help Of <br>HTML,CSS
             </p></div>
+         </div>
 <!--Footer-->
        <section class="footer">
         <div class="footer-content">   
