--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h5>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
        </div>
        <!--Education-->
-       <div class=Studies
+       <div class="Studies">
      <h2>Education</h2> 
         <div class="bordered">
   <p align="center"><img align="center"src="bps.png" width="400" height="400"</p>
