--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <h1>Parth Sharma </h1>
 <h5>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
        </div>
+       <img align="right"src="parthsankhyan.png" width="100" height="100>
        <!--Education-->
        <div class="Studies">
      <h2>Education</h2> 
