--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
   </header>
 </head> 
      <body>
+       <!--icon-->
+       <div class="icon">
+         <img align="right"src="parthsankhyan.png" width="200" height="200>
+           </div>
        <!--Heading-->
        <div class="main-heading">
 <h1>Parth Sharma </h1>
 <h5>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
        </div>
-       <img align="right"src="parthsankhyan.png" width="100" height="100>
+  
        <!--Education-->
        <div class="Studies">
      <h2>Education</h2> 
