--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
      <body>
        <!--icon-->
        <div class="icon">
-         <img align="right"src="parthsankhyan.png" width="100" height="200>
+         <img align="right"src="parthsankhyan.png">
            </div>
-       <!--Heading-->
+   
        <div class="main-heading">
 <h1>Parth Sharma </h1>
 <h5>From Ghumarwin district Bilaspur (Himachal Pradesh) </h5>
