--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     
     
     document.getElementById("currentDateTime").textContent = formattedDateTime; </script> </h4>
-      <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="100" height="100"</a>
-<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="100" height="60"> </a>
- <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="40" height="40"></a> 
-<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="40" height="40"> </a>
+    <div class="social-icons"
+      <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png"></a>
+<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png> </a>
+ <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png"></a> 
+<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png"> </a>
     </a> </div>
   </header>
 </head> 
