--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     
     document.getElementById("currentDateTime").textContent = formattedDateTime; </script> </h4>
-    <div class="social-icons"
+    <div class="social-icons">
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png"></a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png"></a> 
@@ -26,7 +26,7 @@
 </head> 
      <body>
        <!--icon-->
-       <div class="icon">
+       <div clss="logo">
          <img align="right"src="parthsankhyan.png">
            </div>
    
