--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
          </div>
+         <div class="bordered">
+           <p>align="center"><img align="center"src="autocad.png" width="400" height="400</p>
+                               <p> A Certified Cource In Auto Cad Software From Aadis Cad Center At Govt Polytechnic Kinnaur </p>
+                               </div>
        <!--Projects-->
          <div class="mywork">
     <h2> Projects </h2>
